tests/NormalTests/paczka1/fuzzy1/76626649.err
Error in line 1: HQ3Jdyqyzdn S307 68,1
Error in line 8: D79BOKTSx S307 22,9
Error in line 9: HQ3Jdyqyzdn S90 327,5
Error in line 16: ?A34{
Error in line 13: ZkQM A479 88,1
Error in line 24: ZkQM S307 9,9
Error in line 30: ZkQM A479 27,0
